<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rLayout"
        android:layout_weight="0.30"
        android:layout_gravity="center"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroup">

            <RadioButton
                android:text="@string/cel_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonCelsius"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/fah_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonFahrenheit"
                android:layout_weight="1" />

        </RadioGroup>

        <Button
            android:text="@string/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:id="@+id/buttonDoneSelection" />
    </RelativeLayout>
</LinearLayout>